data/derived/comb/progs/unify/prog8057.ml.out
Characters 59-60:
  let fixpoint (f,b) = wwhile(match f b with false -> wwhile(f,b) |b -> b, b);;
                                                             ^
Error: This expression has type 'a -> bool
       but an expression was expected of type 'a -> 'a * bool
       Type bool is not compatible with type 'a * bool 
